--- a/SwampAttack/Resources/image/Daoju5_2.plist
+++ b/SwampAttack/Resources/image/Daoju5_2.plist
@@ -4,71 +4,6 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>daoju50001.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{610,532},{238,292}}</string>
-                <key>offset</key>
-                <string>{4,-4}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{60,8},{238,292}}</string>
-                <key>sourceSize</key>
-                <string>{350,300}</string>
-            </dict>
-            <key>daoju50002.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{276,848},{226,268}}</string>
-                <key>offset</key>
-                <string>{10,-16}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{72,32},{226,268}}</string>
-                <key>sourceSize</key>
-                <string>{350,300}</string>
-            </dict>
-            <key>daoju50003.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{588,772},{234,270}}</string>
-                <key>offset</key>
-                <string>{5,-15}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{63,30},{234,270}}</string>
-                <key>sourceSize</key>
-                <string>{350,300}</string>
-            </dict>
-            <key>daoju50004.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{546,1008},{236,256}}</string>
-                <key>offset</key>
-                <string>{7,-22}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{64,44},{236,256}}</string>
-                <key>sourceSize</key>
-                <string>{350,300}</string>
-            </dict>
-            <key>daoju50005.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,818},{234,272}}</string>
-                <key>offset</key>
-                <string>{6,-14}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{64,28},{234,272}}</string>
-                <key>sourceSize</key>
-                <string>{350,300}</string>
-            </dict>
             <key>stones0001.png</key>
             <dict>
                 <key>frame</key>
@@ -85,7 +20,7 @@
             <key>stones0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{296,578},{290,268}}</string>
+                <string>{{610,532},{290,268}}</string>
                 <key>offset</key>
                 <string>{9,-16}</string>
                 <key>rotated</key>
@@ -176,7 +111,7 @@
             <key>stones0009.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,1054},{244,256}}</string>
+                <string>{{296,578},{244,256}}</string>
                 <key>offset</key>
                 <string>{3,-22}</string>
                 <key>rotated</key>
@@ -192,13 +127,13 @@
             <key>format</key>
             <integer>2</integer>
             <key>realTextureFileName</key>
-            <string>Daoju5.png</string>
+            <string>Daoju5_2.png</string>
             <key>size</key>
-            <string>{1024,2048}</string>
+            <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:6fb2dee4313fc29c2a7b6f9d936c28f5:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:da7ae1e789418e976858f1693a08dc56:1/1$</string>
             <key>textureFileName</key>
-            <string>Daoju5.png</string>
+            <string>Daoju5_2.png</string>
         </dict>
     </dict>
 </plist>
