--- a/SwampAttack/Resources/image/daoju1.plist
+++ b/SwampAttack/Resources/image/daoju1.plist
@@ -7,11 +7,11 @@
             <key>daoju10001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{82,376},{94,116}}</string>
+                <string>{{2,213},{94,116}}</string>
                 <key>offset</key>
                 <string>{12,35}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{60,2},{94,116}}</string>
                 <key>sourceSize</key>
@@ -20,7 +20,7 @@
             <key>daoju10002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{290,110},{106,94}}</string>
+                <string>{{2,309},{106,94}}</string>
                 <key>offset</key>
                 <string>{18,22}</string>
                 <key>rotated</key>
@@ -33,11 +33,11 @@
             <key>daoju10003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{112,106},{100,88}}</string>
+                <string>{{408,236},{100,88}}</string>
                 <key>offset</key>
                 <string>{26,-9}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{71,60},{100,88}}</string>
                 <key>sourceSize</key>
@@ -46,7 +46,7 @@
             <key>daoju10004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{398,166},{102,102}}</string>
+                <string>{{408,132},{102,102}}</string>
                 <key>offset</key>
                 <string>{24,-16}</string>
                 <key>rotated</key>
@@ -59,11 +59,11 @@
             <key>daoju10005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,132},{120,108}}</string>
+                <string>{{286,129},{120,108}}</string>
                 <key>offset</key>
                 <string>{2,-28}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{37,69},{120,108}}</string>
                 <key>sourceSize</key>
@@ -72,7 +72,7 @@
             <key>daoju10006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{290,2},{110,106}}</string>
+                <string>{{120,232},{110,106}}</string>
                 <key>offset</key>
                 <string>{-24,-29}</string>
                 <key>rotated</key>
@@ -85,11 +85,11 @@
             <key>daoju10007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{106,254},{116,94}}</string>
+                <string>{{132,136},{116,94}}</string>
                 <key>offset</key>
                 <string>{-37,15}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,33},{116,94}}</string>
                 <key>sourceSize</key>
@@ -98,119 +98,80 @@
             <key>daoju10008.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{108,128}}</string>
+                <string>{{2,103},{108,128}}</string>
                 <key>offset</key>
                 <string>{-32,31}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{9,0},{108,128}}</string>
                 <key>sourceSize</key>
                 <string>{190,190}</string>
             </dict>
-            <key>daoju20001.png</key>
+            <key>daoju1_explosion0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{402,98},{66,108}}</string>
+                <string>{{290,2},{135,125}}</string>
                 <key>offset</key>
-                <string>{2,30}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{64,11},{66,108}}</string>
-                <key>sourceSize</key>
-                <string>{190,190}</string>
-            </dict>
-            <key>daoju20002.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{112,2},{88,102}}</string>
-                <key>offset</key>
-                <string>{17,35}</string>
+                <string>{-2,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{68,9},{88,102}}</string>
+                <string>{{6,0},{135,125}}</string>
                 <key>sourceSize</key>
-                <string>{190,190}</string>
+                <string>{151,125}</string>
             </dict>
-            <key>daoju20003.png</key>
+            <key>daoju1_explosion0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{202,2},{102,86}}</string>
+                <string>{{2,2},{145,99}}</string>
                 <key>offset</key>
-                <string>{27,11}</string>
+                <string>{1,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{4,2},{145,99}}</string>
+                <key>sourceSize</key>
+                <string>{151,103}</string>
+            </dict>
+            <key>daoju1_explosion0003.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{149,2},{139,68}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{6,3},{139,68}}</string>
+                <key>sourceSize</key>
+                <string>{151,74}</string>
+            </dict>
+            <key>daoju1_explosion0004.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{149,72},{135,62}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{8,6},{135,62}}</string>
+                <key>sourceSize</key>
+                <string>{151,74}</string>
+            </dict>
+            <key>daoju1_explosion0005.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{427,2},{128,36}}</string>
+                <key>offset</key>
+                <string>{2,1}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{71,41},{102,86}}</string>
+                <string>{{7,6},{128,36}}</string>
                 <key>sourceSize</key>
-                <string>{190,190}</string>
-            </dict>
-            <key>daoju20004.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{202,106},{102,84}}</string>
-                <key>offset</key>
-                <string>{36,-14}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{80,67},{102,84}}</string>
-                <key>sourceSize</key>
-                <string>{190,190}</string>
-            </dict>
-            <key>daoju20005.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,254},{120,102}}</string>
-                <key>offset</key>
-                <string>{20,-27}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{55,71},{120,102}}</string>
-                <key>sourceSize</key>
-                <string>{190,190}</string>
-            </dict>
-            <key>daoju20006.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{402,2},{94,108}}</string>
-                <key>offset</key>
-                <string>{-18,-38}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{30,79},{94,108}}</string>
-                <key>sourceSize</key>
-                <string>{190,190}</string>
-            </dict>
-            <key>daoju20007.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,376},{120,78}}</string>
-                <key>offset</key>
-                <string>{-35,6}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{0,50},{120,78}}</string>
-                <key>sourceSize</key>
-                <string>{190,190}</string>
-            </dict>
-            <key>daoju20008.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{178,372},{112,110}}</string>
-                <key>offset</key>
-                <string>{-39,28}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{0,12},{112,110}}</string>
-                <key>sourceSize</key>
-                <string>{190,190}</string>
+                <string>{138,50}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -218,13 +179,13 @@
             <key>format</key>
             <integer>2</integer>
             <key>realTextureFileName</key>
-            <string>Daoju12.png</string>
+            <string>daoju1.png</string>
             <key>size</key>
             <string>{512,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:2889f867122ac52e4e0891876dba7826:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:e3d023ddc0f862126d19d12dbe9a1c9e:1/1$</string>
             <key>textureFileName</key>
-            <string>Daoju12.png</string>
+            <string>daoju1.png</string>
         </dict>
     </dict>
 </plist>
