--- a/SwampAttack/Resources/image/daoju2.plist
+++ b/SwampAttack/Resources/image/daoju2.plist
@@ -4,118 +4,14 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>daoju10001.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{82,376},{94,116}}</string>
-                <key>offset</key>
-                <string>{12,35}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{60,2},{94,116}}</string>
-                <key>sourceSize</key>
-                <string>{190,190}</string>
-            </dict>
-            <key>daoju10002.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{290,110},{106,94}}</string>
-                <key>offset</key>
-                <string>{18,22}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{60,26},{106,94}}</string>
-                <key>sourceSize</key>
-                <string>{190,190}</string>
-            </dict>
-            <key>daoju10003.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{112,106},{100,88}}</string>
-                <key>offset</key>
-                <string>{26,-9}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{71,60},{100,88}}</string>
-                <key>sourceSize</key>
-                <string>{190,190}</string>
-            </dict>
-            <key>daoju10004.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{398,166},{102,102}}</string>
-                <key>offset</key>
-                <string>{24,-16}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{68,60},{102,102}}</string>
-                <key>sourceSize</key>
-                <string>{190,190}</string>
-            </dict>
-            <key>daoju10005.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,132},{120,108}}</string>
-                <key>offset</key>
-                <string>{2,-28}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{37,69},{120,108}}</string>
-                <key>sourceSize</key>
-                <string>{190,190}</string>
-            </dict>
-            <key>daoju10006.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{290,2},{110,106}}</string>
-                <key>offset</key>
-                <string>{-24,-29}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{16,71},{110,106}}</string>
-                <key>sourceSize</key>
-                <string>{190,190}</string>
-            </dict>
-            <key>daoju10007.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{106,254},{116,94}}</string>
-                <key>offset</key>
-                <string>{-37,15}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{0,33},{116,94}}</string>
-                <key>sourceSize</key>
-                <string>{190,190}</string>
-            </dict>
-            <key>daoju10008.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,2},{108,128}}</string>
-                <key>offset</key>
-                <string>{-32,31}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{9,0},{108,128}}</string>
-                <key>sourceSize</key>
-                <string>{190,190}</string>
-            </dict>
             <key>daoju20001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{402,98},{66,108}}</string>
+                <string>{{442,484},{66,108}}</string>
                 <key>offset</key>
                 <string>{2,30}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{64,11},{66,108}}</string>
                 <key>sourceSize</key>
@@ -124,11 +20,11 @@
             <key>daoju20002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{112,2},{88,102}}</string>
+                <string>{{405,124},{88,102}}</string>
                 <key>offset</key>
                 <string>{17,35}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{68,9},{88,102}}</string>
                 <key>sourceSize</key>
@@ -137,11 +33,11 @@
             <key>daoju20003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{202,2},{102,86}}</string>
+                <string>{{405,214},{102,86}}</string>
                 <key>offset</key>
                 <string>{27,11}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{71,41},{102,86}}</string>
                 <key>sourceSize</key>
@@ -150,11 +46,11 @@
             <key>daoju20004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{202,106},{102,84}}</string>
+                <string>{{172,552},{102,84}}</string>
                 <key>offset</key>
                 <string>{36,-14}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{80,67},{102,84}}</string>
                 <key>sourceSize</key>
@@ -163,7 +59,7 @@
             <key>daoju20005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,254},{120,102}}</string>
+                <string>{{405,2},{120,102}}</string>
                 <key>offset</key>
                 <string>{20,-27}</string>
                 <key>rotated</key>
@@ -176,7 +72,7 @@
             <key>daoju20006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{402,2},{94,108}}</string>
+                <string>{{332,484},{94,108}}</string>
                 <key>offset</key>
                 <string>{-18,-38}</string>
                 <key>rotated</key>
@@ -189,11 +85,11 @@
             <key>daoju20007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,376},{120,78}}</string>
+                <string>{{2,452},{120,78}}</string>
                 <key>offset</key>
                 <string>{-35,6}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,50},{120,78}}</string>
                 <key>sourceSize</key>
@@ -202,15 +98,132 @@
             <key>daoju20008.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{178,372},{112,110}}</string>
+                <string>{{2,532},{112,110}}</string>
                 <key>offset</key>
                 <string>{-39,28}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,12},{112,110}}</string>
                 <key>sourceSize</key>
                 <string>{190,190}</string>
+            </dict>
+            <key>daoju2_explosion0001.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{116,532},{54,64}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{54,64}}</string>
+                <key>sourceSize</key>
+                <string>{54,64}</string>
+            </dict>
+            <key>daoju2_explosion0002.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{175,425},{125,155}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{125,155}}</string>
+                <key>sourceSize</key>
+                <string>{125,155}</string>
+            </dict>
+            <key>daoju2_explosion0003.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,308},{142,171}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{142,171}}</string>
+                <key>sourceSize</key>
+                <string>{142,171}</string>
+            </dict>
+            <key>daoju2_explosion0004.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,2},{143,208}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{143,208}}</string>
+                <key>sourceSize</key>
+                <string>{143,208}</string>
+            </dict>
+            <key>daoju2_explosion0005.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{194,254},{169,182}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{169,182}}</string>
+                <key>sourceSize</key>
+                <string>{169,182}</string>
+            </dict>
+            <key>daoju2_explosion0006.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,147},{159,190}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{159,190}}</string>
+                <key>sourceSize</key>
+                <string>{159,190}</string>
+            </dict>
+            <key>daoju2_explosion0007.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{378,302},{128,180}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,1},{128,180}}</string>
+                <key>sourceSize</key>
+                <string>{128,182}</string>
+            </dict>
+            <key>daoju2_explosion0008.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{212,2},{129,191}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{129,191}}</string>
+                <key>sourceSize</key>
+                <string>{129,191}</string>
+            </dict>
+            <key>daoju2_explosion0009.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{212,133},{119,191}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{119,191}}</string>
+                <key>sourceSize</key>
+                <string>{119,191}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -218,13 +231,13 @@
             <key>format</key>
             <integer>2</integer>
             <key>realTextureFileName</key>
-            <string>Daoju12.png</string>
+            <string>daoju2.png</string>
             <key>size</key>
-            <string>{512,512}</string>
+            <string>{512,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:2889f867122ac52e4e0891876dba7826:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:3aeab99e8f4081864ee3349c1a6a4b6d:1/1$</string>
             <key>textureFileName</key>
-            <string>Daoju12.png</string>
+            <string>daoju2.png</string>
         </dict>
     </dict>
 </plist>
