--- a/SwampAttack/Resources/image/qiang12.plist
+++ b/SwampAttack/Resources/image/qiang12.plist
@@ -7,89 +7,89 @@
             <key>bullet_qiang120001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{400,80}}</string>
+                <string>{{2,78},{372,74}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{400,80}}</string>
+                <string>{{14,3},{372,74}}</string>
                 <key>sourceSize</key>
                 <string>{400,80}</string>
             </dict>
             <key>bullet_qiang120002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{402,162},{398,78}}</string>
+                <string>{{376,2},{372,74}}</string>
                 <key>offset</key>
-                <string>{1,-1}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{2,2},{398,78}}</string>
+                <string>{{14,3},{372,74}}</string>
                 <key>sourceSize</key>
                 <string>{400,80}</string>
             </dict>
             <key>bullet_qiang120003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,160},{398,80}}</string>
+                <string>{{2,2},{372,74}}</string>
                 <key>offset</key>
-                <string>{1,0}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{2,0},{398,80}}</string>
+                <string>{{14,3},{372,74}}</string>
                 <key>sourceSize</key>
                 <string>{400,80}</string>
             </dict>
             <key>bullet_qiang120004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{404,82},{400,78}}</string>
+                <string>{{376,152},{372,72}}</string>
                 <key>offset</key>
                 <string>{0,-1}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,2},{400,78}}</string>
+                <string>{{14,5},{372,72}}</string>
                 <key>sourceSize</key>
                 <string>{400,80}</string>
             </dict>
             <key>bullet_qiang120005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,84},{400,74}}</string>
+                <string>{{2,154},{372,68}}</string>
                 <key>offset</key>
                 <string>{0,-3}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,6},{400,74}}</string>
+                <string>{{14,9},{372,68}}</string>
                 <key>sourceSize</key>
                 <string>{400,80}</string>
             </dict>
             <key>bullet_qiang120006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{404,2},{400,78}}</string>
+                <string>{{376,78},{372,72}}</string>
                 <key>offset</key>
                 <string>{0,-1}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,2},{400,78}}</string>
+                <string>{{14,5},{372,72}}</string>
                 <key>sourceSize</key>
                 <string>{400,80}</string>
             </dict>
             <key>reload_qiang120001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{332,364},{90,164}}</string>
+                <string>{{2,356},{90,164}}</string>
                 <key>offset</key>
                 <string>{-29,-3}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{16,11},{90,164}}</string>
                 <key>sourceSize</key>
@@ -98,7 +98,7 @@
             <key>reload_qiang120002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{134,364},{100,164}}</string>
+                <string>{{918,2},{100,164}}</string>
                 <key>offset</key>
                 <string>{-24,-3}</string>
                 <key>rotated</key>
@@ -111,11 +111,11 @@
             <key>reload_qiang120003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{116,696},{112,164}}</string>
+                <string>{{500,344},{112,164}}</string>
                 <key>offset</key>
                 <string>{-19,-3}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{15,11},{112,164}}</string>
                 <key>sourceSize</key>
@@ -124,11 +124,11 @@
             <key>reload_qiang120004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,530},{130,164}}</string>
+                <string>{{334,226},{130,164}}</string>
                 <key>offset</key>
                 <string>{-16,-3}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{9,11},{130,164}}</string>
                 <key>sourceSize</key>
@@ -137,11 +137,11 @@
             <key>reload_qiang120005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,364},{130,164}}</string>
+                <string>{{168,224},{130,164}}</string>
                 <key>offset</key>
                 <string>{-15,-3}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{10,11},{130,164}}</string>
                 <key>sourceSize</key>
@@ -150,7 +150,7 @@
             <key>reload_qiang120006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{802,232},{130,164}}</string>
+                <string>{{2,224},{130,164}}</string>
                 <key>offset</key>
                 <string>{-14,-3}</string>
                 <key>rotated</key>
@@ -163,7 +163,7 @@
             <key>reload_qiang120007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{806,100},{130,164}}</string>
+                <string>{{750,100},{130,164}}</string>
                 <key>offset</key>
                 <string>{-13,-3}</string>
                 <key>rotated</key>
@@ -176,7 +176,7 @@
             <key>reload_qiang120008.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{330,862},{128,162}}</string>
+                <string>{{2,580},{128,162}}</string>
                 <key>offset</key>
                 <string>{-16,-4}</string>
                 <key>rotated</key>
@@ -189,11 +189,11 @@
             <key>reload_qiang120009.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{424,696},{126,162}}</string>
+                <string>{{496,458},{126,162}}</string>
                 <key>offset</key>
                 <string>{-19,-4}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{8,13},{126,162}}</string>
                 <key>sourceSize</key>
@@ -202,11 +202,11 @@
             <key>reload_qiang120010.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{660,242},{128,162}}</string>
+                <string>{{166,488},{128,162}}</string>
                 <key>offset</key>
                 <string>{-22,-4}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{4,13},{128,162}}</string>
                 <key>sourceSize</key>
@@ -215,7 +215,7 @@
             <key>reload_qiang120011.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,242},{116,164}}</string>
+                <string>{{500,226},{116,164}}</string>
                 <key>offset</key>
                 <string>{-18,-3}</string>
                 <key>rotated</key>
@@ -228,11 +228,11 @@
             <key>reload_qiang120012.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,696},{112,164}}</string>
+                <string>{{666,232},{112,164}}</string>
                 <key>offset</key>
                 <string>{-17,-3}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{17,11},{112,164}}</string>
                 <key>sourceSize</key>
@@ -241,11 +241,11 @@
             <key>reload_qiang120013.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{330,530},{94,164}}</string>
+                <string>{{832,528},{94,164}}</string>
                 <key>offset</key>
                 <string>{-26,-3}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{17,11},{94,164}}</string>
                 <key>sourceSize</key>
@@ -254,11 +254,11 @@
             <key>shoot_qiang120001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{424,364},{130,162}}</string>
+                <string>{{332,358},{130,162}}</string>
                 <key>offset</key>
                 <string>{-23,-4}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{2,13},{130,162}}</string>
                 <key>sourceSize</key>
@@ -267,7 +267,7 @@
             <key>shoot_qiang120002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{166,862},{130,162}}</string>
+                <string>{{2,448},{130,162}}</string>
                 <key>offset</key>
                 <string>{-24,-4}</string>
                 <key>rotated</key>
@@ -280,7 +280,7 @@
             <key>shoot_qiang120003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,862},{130,162}}</string>
+                <string>{{168,356},{130,162}}</string>
                 <key>offset</key>
                 <string>{-23,-4}</string>
                 <key>rotated</key>
@@ -293,11 +293,11 @@
             <key>wait_qiang120001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{236,364},{94,164}}</string>
+                <string>{{666,444},{94,164}}</string>
                 <key>offset</key>
                 <string>{-31,-3}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{12,11},{94,164}}</string>
                 <key>sourceSize</key>
@@ -306,11 +306,11 @@
             <key>wait_qiang120002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{556,340},{94,162}}</string>
+                <string>{{330,588},{94,162}}</string>
                 <key>offset</key>
                 <string>{-31,-5}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{12,14},{94,162}}</string>
                 <key>sourceSize</key>
@@ -319,7 +319,7 @@
             <key>wait_qiang120003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{496,242},{96,162}}</string>
+                <string>{{494,586},{96,162}}</string>
                 <key>offset</key>
                 <string>{-32,-6}</string>
                 <key>rotated</key>
@@ -332,7 +332,7 @@
             <key>wait_qiang120004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{332,242},{96,162}}</string>
+                <string>{{660,540},{96,162}}</string>
                 <key>offset</key>
                 <string>{-32,-7}</string>
                 <key>rotated</key>
@@ -345,7 +345,7 @@
             <key>wait_qiang120005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{168,242},{96,162}}</string>
+                <string>{{330,490},{96,162}}</string>
                 <key>offset</key>
                 <string>{-32,-6}</string>
                 <key>rotated</key>
@@ -358,11 +358,11 @@
             <key>wait_qiang120006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{232,530},{96,164}}</string>
+                <string>{{666,346},{96,164}}</string>
                 <key>offset</key>
                 <string>{-32,-4}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{10,12},{96,164}}</string>
                 <key>sourceSize</key>
@@ -371,11 +371,11 @@
             <key>wait_qiang120007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{230,696},{96,164}}</string>
+                <string>{{832,334},{96,164}}</string>
                 <key>offset</key>
                 <string>{-32,-3}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{10,11},{96,164}}</string>
                 <key>sourceSize</key>
@@ -384,7 +384,7 @@
             <key>wait_qiang120008.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{806,2},{96,166}}</string>
+                <string>{{750,2},{96,166}}</string>
                 <key>offset</key>
                 <string>{-32,-2}</string>
                 <key>rotated</key>
@@ -397,7 +397,7 @@
             <key>wait_qiang120009.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{134,530},{96,164}}</string>
+                <string>{{916,168},{96,164}}</string>
                 <key>offset</key>
                 <string>{-32,-3}</string>
                 <key>rotated</key>
@@ -410,11 +410,11 @@
             <key>wait_qiang120010.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{328,696},{94,164}}</string>
+                <string>{{832,432},{94,164}}</string>
                 <key>offset</key>
                 <string>{-31,-3}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{12,11},{94,164}}</string>
                 <key>sourceSize</key>
@@ -430,7 +430,7 @@
             <key>size</key>
             <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:36241fe6ea395b627b9c66d1bed853d6:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:ad4d4e8739dad670e9014a0e6fa413b6:1/1$</string>
             <key>textureFileName</key>
             <string>qiang12.png</string>
         </dict>
